# lenso-audit-log-module

./: Cargo.toml  README.md  package.json  pnpm-lock.yaml  tegami.config.mjs
.github/workflows/: ci.yml  publish.yml
.lenso-release/: README.md  config.json  plan.json  template-manifest.json
.tegami/: publish-lock.yaml  release.md
crates/audit-log/: CHANGELOG.md  Cargo.toml
crates/audit-log/migrations/: 0001_create_audit_log_schema.sql
crates/audit-log/src/: admin.rs  lib.rs  migrations.rs  models.rs  module.rs  public.rs  repositories.rs
crates/audit-log/tests/: audit_log.rs
docs/agents/: issue-tracker.md
docs/superpowers/plans/: 2026-07-04-lenso-audit-log-module.md
docs/superpowers/specs/: 2026-07-04-lenso-audit-log-module-design.md
