[workspace]
resolver = "2"
members = ["crates/audit-log"]

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.94"

[workspace.dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
platform-core = { package = "lenso-platform-core", version = "0.1.4" }
platform-module = { package = "lenso-platform-module", version = "0.1.2" }
platform-testing = { package = "lenso-platform-testing", version = "0.1.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.9", default-features = false, features = ["runtime-tokio", "tls-rustls-ring-webpki", "postgres", "chrono", "json"] }
tokio = { version = "1.52", features = ["macros", "rt-multi-thread"] }
utoipa = { version = "5.5", features = ["chrono"] }
uuid = { version = "1.19", features = ["v7"] }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
