[package]
name = "lenso-module-audit-log"
version = "0.1.1"
edition.workspace = true
license.workspace = true
description = "First-party audit log module for the Lenso backend framework."
repository = "https://github.com/LioRael/lenso-audit-log-module"
homepage = "https://github.com/LioRael/lenso-audit-log-module"
readme = "../../README.md"
categories = ["web-programming", "development-tools"]
keywords = ["backend", "framework", "audit", "log"]
rust-version.workspace = true

[lib]
name = "audit_log"
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
chrono.workspace = true
platform-core.workspace = true
platform-module.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
utoipa.workspace = true
uuid.workspace = true

[dev-dependencies]
platform-testing.workspace = true
tokio.workspace = true

[lints]
workspace = true
